###
add_subdirectory(bukvoed)
add_subdirectory(calib_with_correspondence)
add_subdirectory(cover_net)
add_subdirectory(depth_from_disparity)
add_subdirectory(feature_sandbox)
add_subdirectory(letters)
add_subdirectory(kotsu)
add_subdirectory(mnist)
add_subdirectory(overcom)
add_subdirectory(semeion)
add_subdirectory(testgen)
add_subdirectory(testrun)
add_subdirectory(track_points)
add_subdirectory(yorkurbandb)