###
add_subdirectory(bukvoed)
add_subdirectory(correspond_keypoints)
add_subdirectory(cover_net)
add_subdirectory(feature_sandbox)
add_subdirectory(letters)
add_subdirectory(fht)
add_subdirectory(kotsu)
add_subdirectory(mnist)
add_subdirectory(overcom)
add_subdirectory(semeion)
add_subdirectory(skyline)
add_subdirectory(testgen)
add_subdirectory(testrun)
add_subdirectory(track_points)
add_subdirectory(yorkurbandb)
add_subdirectory(markup)
add_subdirectory(g_storage)